class name pattern applied

--- a/src/components/outline-inverse.scss
+++ b/src/components/outline-inverse.scss
@@ -1,6 +1,6 @@
 @import "../variables";
 
-.outline-inverse.btn-outline-primary {
+.cs-outline-inverse.btn-outline-primary {
     border-color: white !important;
     color: white !important;
 
