--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,8 @@ $purple: #9500da;
 $cyan: #00a9d3;
 $orange: #ff5100;
 $red: #f72a1b;
+$yellow: #ffeb00;
+$pink: #ff0075;
 $grey: #444444;
 
 $primary: $cyan;
