outline and striped :: Buttons

--- a/src/global.scss
+++ b/src/global.scss
@@ -3,6 +3,7 @@
 /* Bootstrap 4 */
 $theme-colors: (
     "primary": $primary,
+    "secondary": $secondary,
     "success": $green,
     "red": $red,
     "yellow": $yellow,
