sizes + colors + rainbow :: Text

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,12 +1,14 @@
 $green: #00d146;
 $purple: #9500da;
 $cyan: #00a9d3;
+$yellow: #ffeb00;
 $orange: #ff5100;
 $red: #f72a1b;
-$yellow: #ffeb00;
 $pink: #ff0075;
 $grey: #444444;
+$light-grey: #6C757D;
+$dark-grey: #343a40;
 
 $primary: $cyan;
-$secondary: #6C757D;
-$dark: #343a40;
+$secondary: $light-grey;
+$dark: $dark-grey;
