--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,11 @@
-$green: #00d146;
-$purple: #9500da;
 $cyan: #00a9d3;
+$pink: #ff0075;
+$purple: #9500da;
+$violet: #f83ef8;
+$green: #00d146;
 $yellow: #ffeb00;
 $orange: #ff5100;
 $red: #f72a1b;
-$pink: #ff0075;
 $grey: #444444;
 $light-grey: #6C757D;
 $dark-grey: #343a40;
