--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,9 @@ $theme-colors: (
     "info": $pink,
 );
 @import "node_modules/bootstrap/scss/bootstrap";
+*:disabled {
+    cursor: not-allowed !important;
+}
 
 /* Fonts */
 @font-face {
