--- a/src/global.scss
+++ b/src/global.scss
@@ -4,10 +4,10 @@
 $theme-colors: (
     "primary": $primary,
     "secondary": $secondary,
-    "success": $green,
-    "red": $red,
-    "yellow": $yellow,
-    "info": $pink,
+    "success": map-get($colors, "green"),
+    "red": map-get($colors, "red"),
+    "yellow": map-get($colors, "yellow"),
+    "info": map-get($colors, "pink"),
 );
 @import "node_modules/bootstrap/scss/bootstrap";
 *:disabled {
@@ -22,10 +22,10 @@ $theme-colors: (
 
 html {
     font-family: "Montserrat Light" !important;
-    background-color: #2a2a2a !important;
+    background-color: map-get($colors, "background") !important;
     color: white !important;
     font-size: 16px;
-    border-top: 4px solid $cyan;
+    border-top: 4px solid $primary;
 }
 
 body {
@@ -41,7 +41,7 @@ body {
     border-left: 1px solid #fff;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: $grey;
+    background-color: map-get($colors, "grey");
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -50,5 +50,5 @@ body {
     border-radius: 2px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color: lighten($grey, 5%);
+    background-color: lighten(map-get($colors, "grey"), 5%);
 }
