--- a/src/components/striped.scss
+++ b/src/components/striped.scss
@@ -26,3 +26,10 @@
 .cs-striped.btn-light {
     @include setBgColorAndHoverStriped(white);
 }
+
+/* BGs */
+@each $name, $value in $colors {
+    .cs-bg-#{$name}.cs-striped {
+        @include setBgColorStriped($value);
+    }
+}
