--- a/src/global.scss
+++ b/src/global.scss
@@ -45,6 +45,10 @@ body {
     padding-bottom: 12px;
 }
 
+hr {
+    border-top: 1px solid rgba(0, 0, 0, 0.18);
+}
+
 ::-webkit-scrollbar {
     width: 12px;
 }
