--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,3 +16,5 @@ $colors: (
 $primary: map-get($colors, "cyan");
 $secondary: map-get($colors, "light-grey");
 $dark: map-get($colors, "dark-grey");
+
+$default-z-index: 9999;
