--- a/src/global.scss
+++ b/src/global.scss
@@ -36,7 +36,7 @@ html {
     background-color: map-get($colors, "background") !important;
     color: white !important;
     font-size: 16px;
-    border-right: 2px solid $primary;
+    border-left: 8px solid $primary;
 }
 
 body {
@@ -54,7 +54,6 @@ hr {
 }
 ::-webkit-scrollbar-track {
     background-color: white;
-    border-left: 1px solid map-get($colors, "light-grey");
 }
 ::-webkit-scrollbar-thumb {
     background-color: map-get($colors, "dark-grey");
