--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,9 +7,9 @@ $colors: (
     "yellow": #ffeb00,
     "orange": #ff5100,
     "red": #f72a1b,
-    "grey": #444444,
+    "grey": #4d4d4d,
     "light-grey": #6c757d,
-    "dark-grey": #343a40,
+    "dark-grey": #333333,
     "background": #2a2a2a
 );
 
