--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -5,8 +5,36 @@
     padding-top: 5px;
     padding-left: 8px;
     padding-right: 8px;
+    padding-bottom: 5px;
     display: flexbox;
     align-items: center;
+    border: solid 1.2px white;
+}
+.cs-card-header {
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-top: -6px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+}
+.cs-card-header > .right {
+    margin-left: auto;
+    margin-right: 0;
+}
+.cs-card-header.no-bg {
+    background-color: transparent !important;
+}
+
+@each $name, $value in $colors {
+    .cs-card-#{$name} {
+        border-color: $value;
+    }
+    .cs-card-#{$name} > .cs-card-header {
+        background-color: $value;
+    }
 }
 
 /* CARD STATUS */
@@ -21,6 +49,7 @@
     width: -webkit-fill-available;
     margin-right: 10px;
     z-index: #{$default-z-index + 1};
+    border: none;
 
     height: 138px;
 
@@ -38,6 +67,7 @@
     margin-top: 30px;
     margin-left: 8px;
     z-index: #{$default-z-index + 1};
+    border: none;
 
     height: 120px;
 
