Dark/Light Theme :: v2.0.0

--- a/src/dark-global.scss
+++ b/src/dark-global.scss
@@ -33,7 +33,7 @@ $theme-colors: (
 
 html {
     font-family: "Montserrat Light" !important;
-    background-color: map-get($colors, "background") !important;
+    background-color: map-get($colors, "dark-background") !important;
     color: white !important;
     font-size: 16px;
 }
