--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,9 +8,10 @@ $colors: (
     "orange": #ff5100,
     "red": #f72a1b,
     "grey": #4d4d4d,
-    "light-grey": #6c757d,
+    "light-grey": #7c7c7c,
     "dark-grey": #333333,
-    "background": #2a2a2a
+    "dark-background": #2a2a2a,
+    "light-background": white
 );
 
 $primary: map-get($colors, "cyan");
