--- a/src/components/light/legend__light.scss
+++ b/src/components/light/legend__light.scss
@@ -1,4 +1,4 @@
-@import "../variables";
+@import "../../variables";
 
 .cs-fieldset > legend {
     position: relative;
@@ -25,7 +25,7 @@
         height: 52%;
         left: -4px;
         bottom: -1.8px;
-        border: 5px solid map-get($colors, "background");
+        border: 5px solid map-get($colors, "light-background");
         border-top: none;
     }
 }
@@ -41,7 +41,7 @@
         height: 53%;
         left: -4px;
         top: -1.5px;
-        border: 5px solid map-get($colors, "background");
+        border: 5px solid map-get($colors, "light-background");
         border-bottom: none;
     }
 }
