--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,8 +7,8 @@ $colors: (
     "yellow": #ffeb00,
     "orange": #ff5100,
     "red": #f72a1b,
-    "grey": #4d4d4d,
-    "light-grey": #7c7c7c,
+    "grey": #6e6e6e,
+    "light-grey": #b3b3b3,
     "dark-grey": #333333,
     "dark-background": #2a2a2a,
     "light-background": white
